# promptforge

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PUBLISH.md  PromptForge.md  README.md  build-client.sh  github-publishing-guide.md  issue_watcher.sh  package.json  proj  setup_github_labels.sh
client/: package-lock.json  package.json
docs/: github-setup.md  husky-setup.md
issues/: .gitkeep  issue_1_analysis.md
prompts/: README.md
server/: index.js  package-lock.json  package.json
webhook-config/: DEPLOYMENT-CHECKLIST.md  INTEGRATION-EXAMPLES.md  ISSUE-WEBHOOK-GUIDE.md  MODULAR-PROMPTS-GUIDE.md  POLLING-TO-WEBHOOK-MIGRATION.md  README.md  WEBHOOK-SETUP-GUIDE.md  cleanup-test-repo.sh  create-test-repo.sh  handle-github-event-modular.sh  handle-github-event-with-issues.sh  handle-github-event.sh  hooks.json  manage-webhook.sh  nginx-webhook.conf  run-trigger-events.sh  setup-github-webhook.sh  setup-with-pat.sh  start-webhook.sh  test-all-events.py  test-issue-webhook.sh  (+7 more)
webhook-python/: .env.example  Dockerfile  MIGRATION.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
webhook-python/config/: settings.yaml
webhook-python/prompts/issues/: new_issue.md
webhook-python/prompts/pull_requests/: new_pr.md  pr_updated.md
webhook-python/prompts/releases/: new_release.md
webhook-python/scripts/: start.sh  stop.sh
webhook-python/src/webhook_handler/: __init__.py  clients.py  config.py  handlers.py  logging_config.py  main.py  prompts.py  webhook_processor.py
webhook-python/tests/: __init__.py  conftest.py  test_handlers.py
(+43 files in other folders)
